# dwCompute

./: .gitignore  CMakeLists.txt  README.md
include/: device.h  dwCompute.h  kernel_macros.h  platform.h
include/cuda/: cu_backend.h
include/opencl/: cl_backend.h  cl_device.h  cl_platform.h
sample/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  kernel_macros.cpp  platform.cpp
src/opencl/: cl_device.cpp  cl_platform.cpp
